--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Therament">
-        <activity android:name=".activities.NewPasswordActivity"></activity>
+        <activity android:name=".activities.HospitalActivity"></activity>
+        <activity android:name=".activities.CityActivity" />
+        <activity android:name=".activities.NewPasswordActivity" />
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/title_activity_main" />
