--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.firebase:firebase-core:19.0.0'
     implementation 'androidx.browser:browser:1.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation 'com.github.amarjain07:StickyScrollView:1.0.2'
     testImplementation 'junit:junit:4.13.2'
     implementation "com.airbnb.android:lottie:3.6.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
