--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ android {
 
 dependencies {
 
+    implementation files('libs/activation.jar')
+    implementation files('libs/additional.jar')
+    implementation files('libs/mail.jar')
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -44,7 +47,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:19.0.0'
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'com.github.amarjain07:StickyScrollView:1.0.2'
     testImplementation 'junit:junit:4.13.2'
     implementation "com.airbnb.android:lottie:3.6.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
